# colog

./: .gitignore  .gitmodules  Makefile  README.md  colog.cabal
src/: DateMatch.hs  LineFilter.hs  Main.hs
src/System/Log/Colog/: DateMatch.hs  LineFilter.hs
