name:                   colog
version:                0
synopsis:               A log aggregator
description:            A log aggregator
copyright:              Erudify A.G.
license:                BSD3
license-file:           LICENSE
author:                 Thomas Schilling
maintainer:             nominolo@googlemail.com
category:               System
build-type:             Simple
homepage:               https://github.com/erudify/colog
cabal-version:          >=1.8

executable colog
  build-depends:
        base                    >= 4,
        aws                     == 0.7.*,
        async                   == 2.0.*,
        attoparsec              == 0.10.*,
        bzlib-conduit           >= 0.2.1.1 && < 0.3,
        cmdtheline              >= 0.2 && < 0.2.2,
           -- 0.2.2 has broken output for --help
        containers              == 0.5.*,
        heaps                   == 0.2.*,
        http-conduit            == 1.9.*,
        http-types              == 0.8.*,
        conduit                 == 1.0.*,
        transformers            == 0.3.*,
        bytestring              == 0.10.*,
        io-streams              == 1.0.*,
        parallel-io             == 0.3.*,
        pretty                  == 1.1.*,
        stm                     == 2.4.*,
        SafeSemaphore           == 0.9.*,
        text

  hs-source-dirs:	src
  main-is:		Main.hs

  other-modules:        System.Log.Colog.DateMatch
                        System.Log.Colog.LineFilter

  ghc-options:		-Wall -threaded -with-rtsopts=-N -O2
  ghc-prof-options:	-auto-all
